--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ html {
     white-space: nowrap;
     color: #ffffff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff;
-    font-family: 'K2D', sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
 
 /* thai */
