--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Prompt"), local("Prompt"),
+    url("/Prompt-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "K2D";
+  font-style: normal;
+  font-weight: 400;
+  src: local("K2D"), local("K2D"),
+    url("/K2D-Regular.ttf") format("truetype");
+}
+
+
 html {
     @apply md:px-12 py-6 px-4 bg-gradient-to-bl from-yellow-200 via-green-200 to-blue-200;
     font-family: 'Prompt', sans-serif;
