--- a/src/style.css
+++ b/src/style.css
@@ -30,5 +30,5 @@ html {
     white-space: nowrap;
     color: #ffffff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff;
-    font-family: 'Sarabun', sans-serif;
+    font-family: -apple-system, 'K2D', sans-serif;
 }
